k8s/aws/serviceaccount-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-service
  namespace: vidio
spec:
  template:
    spec:
      serviceAccountName: video-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processing-service
  namespace: vidio
spec:
  template:
    spec:
      serviceAccountName: processing-service
