k8s/aws/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: vidio
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: vidio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0.6
          args: ["start-dev", "--import-realm"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keycloak-realm
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: keycloak-realm
          configMap:
            name: keycloak-realm
